adding new podcast section

--- a/src/site/_includes/footer.liquid
+++ b/src/site/_includes/footer.liquid
@@ -13,4 +13,8 @@
     <p></p>
     <p class="legaleeze">DAI is an equal opportunity/affirmative action employer with a commitment to diversity. All qualified applicants will receive consideration for employment without regard to race, color, religion, sex, sexual orientation, gender identity or national origin. <a href="/eeo">Related Resources</a></p>
   </div>
+  <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+  <script>
+    const player = new Plyr('#player', {});
+  </script>
 </footer>
