--- a/src/site/_includes/head.liquid
+++ b/src/site/_includes/head.liquid
@@ -1,6 +1,10 @@
 <head>
+  {% if page.url contains 'practiceofpartnership-season-1' %}
+    <meta name="turbo-visit-control" content="reload">
+  {% endif %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link href="http://gmpg.org/xfn/11" rel="profile">
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="robots" content="index, follow">
   <!-- Enable responsiveness on mobile devices -->
