--- a/src/site/practice-partnerships.liquid
+++ b/src/site/practice-partnerships.liquid
@@ -30,9 +30,9 @@ title: Practice of Partnership Podcast
   <div class="mx-auto  sm:px-6 lg:px-8 bg-[#557D91] py-8 grid place-items-center">
       <span class="isolate inline-flex rounded-md shadow-sm">
         <button onclick="window.open('https://feeds.soundcloud.com/users/soundcloud:users:1167420997/sounds.rss')" type="button" class="relative inline-flex items-center rounded-l-[4px] border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-solid fa-rss w-4 h4 mr-1 mb-[0.15rem]"></i> RSS</button>
-        <button onclick="window.open('https://podcasts.apple.com/us/podcast/unburdened/id1647023176')" type="button" class="relative -ml-px inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-brands fa-apple w-4 h4 mr-1 mb-[0.15rem]"></i> Apple</button>
-        <button onclick="window.open('https://open.spotify.com/show/65FND64bWAlO16alNrA4yG?si=f7dac8786306462c')" type="button" class="relative -ml-px inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-brands fa-spotify w-4 h4 mr-1 mb-[0.15rem]"></i> Spotify</button>
-        <button onclick="window.open('https://www.stitcher.com/show/1033661')" type="button" class="relative -ml-px inline-flex items-center rounded-r-[4px] border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-solid fa-podcast w-4 h4mb-[0.15rem]" top-1></i> Stitcher</button>
+        <button onclick="window.open('https://podcasts.apple.com/us/podcast/practice-of-partnership/id1691100695')" type="button" class="relative -ml-px inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-brands fa-apple w-4 h4 mr-1 mb-[0.15rem]"></i> Apple</button>
+        <button onclick="window.open('https://open.spotify.com/show/6o64ScNzsENUJBwx7hqvnX')" type="button" class="relative -ml-px inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-brands fa-spotify w-4 h4 mr-1 mb-[0.15rem]"></i> Spotify</button>
+        <button onclick="window.open('https://www.stitcher.com/show/1071846')" type="button" class="relative -ml-px inline-flex items-center rounded-r-[4px] border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-solid fa-podcast w-4 h4mb-[0.15rem]" top-1></i> Stitcher</button>
       </span>
   </div>
 <div class="bg-[#F7F7F7] ">
@@ -63,7 +63,7 @@ title: Practice of Partnership Podcast
               <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
               <p class="mb-8">Why do effective partnerships between development agencies and local entities matter? Because they offer a rich source of innovation, a credible pathway for sustainable change, and the ability to implement solutions at scale.</p>
               
-              <button onclick="Turbo.visit('/unburdened-season-1/episode-1')" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Listen & Show Notes</button>
+              <button onclick="Turbo.visit('/practiceofpartnership-season-1/episode-1')" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Listen & Show Notes</button>
             </div>
           </div>
         </div>
