--- a/src/site/_layouts/pop.liquid
+++ b/src/site/_layouts/pop.liquid
@@ -44,7 +44,7 @@ layout: base.liquid
         </ul>
       </div>
     </div>
-    <div class="lg:col-span-2 bg-daiLightGray p-8 grid place-items-center h-full">
+    <div class="lg:col-span-2 bg-white p-8 grid place-items-center h-full">
       <div class="prose h-full grid">
         <div class="desc">
           <div style="position:relative;">{{item.embed}}
