--- a/src/site/practice-partnerships.liquid
+++ b/src/site/practice-partnerships.liquid
@@ -3,6 +3,7 @@ permalink: practiceofpartnership-podcast.html
 layout: base.liquid
 description: Podcast Index Page
 title: Practice of Partnership Podcast
+image: /assets/images/pop-album-art.jpg
 ---
 <script src="https://kit.fontawesome.com/a7a8a2a44a.js" crossorigin="anonymous"></script>
 <div class="base-container mt-[65px] lg:mt-[128px]">
@@ -63,7 +64,7 @@ title: Practice of Partnership Podcast
               <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
               <p class="mb-8">Why do effective partnerships between development agencies and local entities matter? Because they offer a rich source of innovation, a credible pathway for sustainable change, and the ability to implement solutions at scale.</p>
               
-              <button onclick="Turbo.visit('/practiceofpartnership-season-1/episode-1')" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Listen & Show Notes</button>
+              <button onclick="window.open('/practiceofpartnership-season-1/episode-1')" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Listen & Show Notes</button>
             </div>
           </div>
         </div>
