--- a/src/site/_layouts/pop.liquid
+++ b/src/site/_layouts/pop.liquid
@@ -1,5 +1,7 @@
 ---
+title: Practice of Partnership Podcast
 layout: base.liquid
+image: '/assets/images/pop-album-art.jpg'
 ---
 <script src="https://kit.fontawesome.com/a7a8a2a44a.js" crossorigin="anonymous"></script>
 {%- for item in pagination.items -%}
@@ -18,6 +20,7 @@ layout: base.liquid
       </div>
     </div>
   </div>
+  <div class="bg-daiDark h-4 w-[100%]"></div>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-0 bg-daiLightGray">
     <div class="bg-daiGray02 grid place-items-center lg:place-items-start">
       <a href="/practiceofpartnership-podcast"><img src="/assets/images/pop-album-art.jpg" alt=""></a>
@@ -58,7 +61,7 @@ layout: base.liquid
           </ul>
         </div>
         <div class="content-end">
-          <p class="align-bottom">You can listen to UNBURDENED in many places: Right here on our website, on <a href="https://podcasts.apple.com/us/podcast/unburdened/id1647023176">Apple Podcasts</a>, <a href="https://open.spotify.com/show/65FND64bWAlO16alNrA4yG?si=f7dac8786306462c">Spotify</a>, or the <a href="https://feeds.soundcloud.com/users/soundcloud:users:1167420997/sounds.rss">podcatcher</a> of your choice.</p>
+          <p class="align-bottom">You can listen to this podcast in many places: Right here on our website, on <a href="https://podcasts.apple.com/us/podcast/unburdened/id1647023176">Apple Podcasts</a>, <a href="https://open.spotify.com/show/65FND64bWAlO16alNrA4yG?si=f7dac8786306462c">Spotify</a>, or the <a href="https://feeds.soundcloud.com/users/soundcloud:users:1167420997/sounds.rss">podcatcher</a> of your choice.</p>
         </div>
       </div>
     </div>
