--- a/src/site/_layouts/pop.liquid
+++ b/src/site/_layouts/pop.liquid
@@ -13,7 +13,7 @@ image: '/assets/images/pop-album-art.jpg'
       <hr class="daiBar border-y-4 lg:border-y-[6px] w-14 lg:w-[6rem] border-daiDark">
       <span class="isolate inline-flex rounded-md shadow-sm mt-8">
         <button onclick="window.open('https://feeds.soundcloud.com/users/soundcloud:users:1167420997/sounds.rss')" type="button" class="relative inline-flex items-center rounded-l-[4px] border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-solid fa-rss w-4 h4 mr-1 mb-[0.15rem]"></i> RSS</button>
-        <button onclick="window.open('https://podcasts.apple.com/us/podcast/practice-of-partnership/id1691100695')" type="button" class="relative -ml-px inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-brands fa-apple w-4 h4 mr-1 mb-[0.15rem]"></i> Apple</button>
+        <button onclick="window.open('https://podcasts.apple.com/us/podcast/practice-of-partnership/id1691333937')" type="button" class="relative -ml-px inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-brands fa-apple w-4 h4 mr-1 mb-[0.15rem]"></i> Apple</button>
         <button onclick="window.open('https://open.spotify.com/show/6o64ScNzsENUJBwx7hqvnX')" type="button" class="relative -ml-px inline-flex items-center border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-brands fa-spotify w-4 h4 mr-1 mb-[0.15rem]"></i> Spotify</button>
         <button onclick="window.open('https://www.stitcher.com/show/1071846')" type="button" class="relative -ml-px inline-flex items-center rounded-r-[4px] border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-daiLinks hover:bg-gray-50 focus:z-10 focus:border-daiGray02 focus:outline-none focus:ring-1 focus:ring-daiGray02"><i class="fa-solid fa-podcast w-4 h4 mr-1 mb-[0.15rem]"></i> Stitcher</button>
       </span>
@@ -61,7 +61,7 @@ image: '/assets/images/pop-album-art.jpg'
           </ul>
         </div>
         <div class="content-end">
-          <p class="align-bottom">You can listen to this podcast in many places: Right here on our website, on <a href="https://podcasts.apple.com/us/podcast/unburdened/id1647023176">Apple Podcasts</a>, <a href="https://open.spotify.com/show/65FND64bWAlO16alNrA4yG?si=f7dac8786306462c">Spotify</a>, or the <a href="https://feeds.soundcloud.com/users/soundcloud:users:1167420997/sounds.rss">podcatcher</a> of your choice.</p>
+          <p class="align-bottom">You can listen to this podcast in many places: Right here on our website, on <a href="https://podcasts.apple.com/us/podcast/practice-of-partnership/id1691333937">Apple Podcasts</a>, <a href="https://open.spotify.com/show/6o64ScNzsENUJBwx7hqvnX">Spotify</a>, or the <a href="https://feeds.soundcloud.com/users/soundcloud:users:1167420997/sounds.rss">podcatcher</a> of your choice.</p>
         </div>
       </div>
     </div>
