--- a/src/site/practice-partnerships.liquid
+++ b/src/site/practice-partnerships.liquid
@@ -18,7 +18,7 @@ image: /assets/images/pop-album-art.jpg
           <div class="mt-1.5 relative blog-search">
             <div>
               <div class="mt-1 w-full">
-                <p class="mt-5 text-2xl text-daiDark italic">We can't do development without the power of local.</p>
+                <p class="mt-5 text-2xl text-daiDark italic">Tapping into the power of local.</p>
               </div>
             </div>
           </div>
