--- a/src/site/_layouts/pop.liquid
+++ b/src/site/_layouts/pop.liquid
@@ -36,7 +36,7 @@ image: '/assets/images/pop-album-art.jpg'
           <li>
             <strong class="text-white">Host & Producer</strong>
             <p class="mt-0 mb-0 h leading-4">Megan Howe</p>
-            <p class="mt-0 mb-0 h leading-4">Global Health Communications Advisor, DAI</p>
+            <p class="mt-0 mb-0 h leading-4">Principal Communications Specialist, DAI</p>
           </li>
           <li>
             <strong class="text-white">Artwork & Brand Design</strong>
