--- a/src/site/practice-partnerships.liquid
+++ b/src/site/practice-partnerships.liquid
@@ -46,7 +46,7 @@ image: /assets/images/pop-album-art.jpg
 <!-- PODCAST ONE -->
 <div class="bg-daiLightGray">
   <div class="max-w-7xl mx-auto py-16 sm:py-24">
-  <div class="back-box border-[16px] border-white h-[400px] xl:h-[650px] w-[60%] z-0 absolute ml-10">
+  <div class="back-box border-[16px] border-white h-[1600px] xl:h-[1750] w-[60%] z-0 absolute ml-10">
       <h2 class="mt-10 ml-8 text-4xl uppercase"><span class="font-bold">Season 01</span> <span class="font-normal">Episodes</span></h2>
       <hr class="daiBar ml-8 border-y-4 w-14 border-daiDark">
       <p class="mt-2 ml-8">Please listen to the episodes in order.</p>
@@ -76,4 +76,26 @@ image: /assets/images/pop-album-art.jpg
       </div>
     </div>
   </div> 
+</div>
+<div class="bg-daiLightGray pb-16">
+  <div class="grid grid-cols-2 gap-6 content-end max-w-5xl mx-auto bg-daiLightGray">
+    {% assign podcasts = pop.episodes %}
+    {% for podcast in podcasts offset:1 %}
+    <div class="bg-white z-10">
+      <div class="bg-[#557D91]">
+        <h3 class="uppercase text-white pl-3 sm:pl-4 md:pl-6 py-6 mb-0">EPISODE #{{podcast.number}}</h3>
+      </div>
+      <div class="feature-image aspect-square" style="background: url('/assets/images/pop-album-art.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+      </div>
+      <div class="post-preview bg-white p-8 flex flex-col min-h-[500px]">
+        <h2 class="text-3xl">{{ podcast.title }}</h2>
+        <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
+        <div class="flex-grow">
+          <p class="mb-8">{{ podcast.description }}</p>
+        </div>
+        <button onclick="window.open('/practiceofpartnership-season-1/episode-2')" type="button" class="daiButtons my-8 max-w-[257px] items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Listen & Show Notes</button>
+      </div>
+    </div>
+    {% endfor %}
+</div>    
 </div>
