--- a/src/site/practice-partnerships.liquid
+++ b/src/site/practice-partnerships.liquid
@@ -85,7 +85,7 @@ image: /assets/images/pop-album-art.jpg
       <div class="bg-[#557D91]">
         <h3 class="uppercase text-white pl-3 sm:pl-4 md:pl-6 py-6 mb-0">EPISODE #{{podcast.number}}</h3>
       </div>
-      <div class="feature-image aspect-square" style="background: url('/assets/images/pop-album-art.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+      <div class="feature-image aspect-square filtered{{podcast.number}}" style="background: url('/assets/images/pop-album-art-no-logo.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
       </div>
       <div class="post-preview bg-white p-8 flex flex-col min-h-[500px]">
         <h2 class="text-3xl">{{ podcast.title }}</h2>
