--- a/src/site/_includes/footer.liquid
+++ b/src/site/_includes/footer.liquid
@@ -18,3 +18,12 @@
     const player = new Plyr('#player', {});
   </script>
 </footer>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PTPMR7FEDJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PTPMR7FEDJ');
+</script>
