--- a/src/site/podcast.liquid
+++ b/src/site/podcast.liquid
@@ -42,7 +42,7 @@ title: Unburdened Podcast
     <div class="container max-w-4xl">
       <p>And when we think about health, we probably think about our individual health issues and wellbeing, or a disease we’ve had, or past surgery, or some other personal burden. </p>
       <p>But in fact, much of what ails us is connected with the world around us. Where we live, our environment, our communities, our relationships—even our social status deeply affects our health and wellbeing, in many cases including our life expectancy. </p>
-      <p>Bad environments, poor relationships, marginalization, and poverty weigh down our health and shape our lives. Have you ever felt crippled by financial instability or poverty? Choked by polluted air or the garbage on your streets? Have you been effectively cut off from health services because of your race, class, or gender? Perhaps you have had to flee your home because of conflict or violence…</p>
+      <p>Bad environments, poor relationships, and poverty weigh down our health and shape our lives. Have you ever felt crippled by financial instability or poverty? Choked by polluted air or the garbage on your streets? Perhaps you have had to flee your home because of conflict or violence…</p>
       <p>What can we do about these things? How can we collectively live healthier lives and alleviate some of these factors weighing on our health? Join us this October as we kick off Unburdened, DAI’s podcast about what it really takes to shape a healthier, more livable world.  </p>
     </div>
   </div>
