--- a/src/site/podcast.liquid
+++ b/src/site/podcast.liquid
@@ -64,9 +64,9 @@ title: Unburdened Podcast
             </h3>
             <!-- PODCAST PREVIEW -->
             <div class="post-preview bg-white p-8">
-              <h2 class="text-3xl">Can gender equality make us healthier?</h2>
+              <h2 class="text-3xl">How does women’s empowerment relate to health?</h2>
               <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
-              <p class="mb-8">Most of us agree that equality is a good thing, but is there more than a moral argument for making our societies more equal? Can gender equality actually make our communities and countries healthier?</p>
+              <p class="mb-8">COVID-19 was bad for the planet, bad for democracy, and bad for healthcare—it also dramatically increased inequality. The social and health impacts on women were particularly bad.</p>
               
               <button onclick="Turbo.visit('/unburdened-season-1/episode-1')" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Listen & Show Notes</button>
             </div>
