--- a/src/site/unburdened/episode.liquid
+++ b/src/site/unburdened/episode.liquid
@@ -2,7 +2,8 @@
   pagination:
     data: podcast.episodes
     size: 1
-  permalink: "unburdened-season-1/episode-{{pagination.pageNumber | plus: 1}}/"
+  permalink: false
+  # permalink: "unburdened-season-1/episode-{{pagination.pageNumber | plus: 1}}/"
   pageNumber: 1
   layout: podcast.liquid
 ---
