--- a/src/site/podcast.liquid
+++ b/src/site/podcast.liquid
@@ -1,5 +1,5 @@
 ---
-permalink: unburdened-podcast.html
+permalink: false
 layout: base.liquid
 description: Podcast Index Page
 title: Unburdened Podcast
