revising footer compliance

--- a/src/site/_includes/footer.liquid
+++ b/src/site/_includes/footer.liquid
@@ -11,7 +11,7 @@
       <svg class="logo--footer footer-flat--logo" viewBox="0 0 982 245" preserveAspectRatio="xMinYMax meet"><use xlink:href="#flater-logo"></use></svg><span class="trademarked">&reg; </span>
     </div>
     <p></p>
-    <p class="legaleeze">DAI is an equal opportunity/affirmative action employer with a commitment to diversity. All qualified applicants will receive consideration for employment without regard to race, color, religion, sex, sexual orientation, gender identity or national origin. <a href="/eeo">Related Resources</a></p>
+    <p class="legaleeze">DAI is an equal opportunity employer. All qualified applicants will receive consideration for employment in accordance with all applicable law. In compliance with the Americans with Disabilities Act, DAI will provide reasonable accommodation to qualified individuals with disabilities. To request a potential accommodation, please send an email to <a href="mailto:accomodationrequest@dai.com">accomodationrequest@dai.com</a></p>
   </div>
   <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
   <script>
